--- a/gb/23/4/4/n13964871.md
+++ b/gb/23/4/4/n13964871.md
@@ -1,66 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>大批媒体驻守川普大厦外 挺川反川者集会</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964876-165096-600x400.jpg" />
 <h6>2023年4月3日，大批媒体记者拿起相机长焦镜头，聚集在川普大厦外面的第五大道，准备跟拍川普回到川普大厦的画面。（黄小堂／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年04月04日讯】（大纪元记者黄小堂<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>报导）美国前总统<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>周一（4月3日）从佛州飞往纽约，准备出席4日跟“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B0%81%E5%8F%A3%E8%B4%B9.md#1">封口费</a>”相关的首次传讯。当天下午<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E5%A4%A7%E5%8E%A6.md#1">川普大厦</a>外，各家媒体大量人马挤在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9B%BC%E5%93%88%E9%A1%BF.md#1">曼哈顿</a>56街和55街之间的第五大道街上，准备跟拍川普回到川普大厦的画面，而一些川普支持者和反对者也聚集在这里，手持标语各自表达立场。</p>
-<p>第五大道的人潮、车潮川流不息，当天下午一些开车经过的民众也透过各种方式表达他们的立场，所幸情况大致平和，没有见到严重的冲突场面。3日下午，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>抵达<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BA%BD%E7%BA%A6.md#1">纽约</a>，在多名维安人员看照下，从56街进入<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE%E5%A4%A7%E5%8E%A6.md#1">川普大厦</a>内，而不是从第五大道的门口进入。</p>
-<figure id="attachment_13964874" aria-describedby="caption-attachment-13964874" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964874-165094.jpg"><img class="size-large wp-image-13964874" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964874-165094-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964874" class="wp-caption-text">2023年4月3日，警方出动至少三架直升机，在川普大厦上进行维安监控。（黄小堂／大纪元）</figcaption></figure>
-<figure id="attachment_13964872" aria-describedby="caption-attachment-13964872" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964872-165101.jpg"><img class="size-large wp-image-13964872" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964872-165101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964872" class="wp-caption-text">2023年4月3日，警方在川普大厦外设置路障，纽约市警察在外进行维安。（黄小堂／大纪元）</figcaption></figure>
-<p>纽约市长亚当斯和纽约市警局局长塞维尔（Keechant Sewell）3日中午召开新闻发布会，表示目前没有针对纽约市的具体可信威胁，民众应该照常过日子，但是预计<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9B%BC%E5%93%88%E9%A1%BF.md#1">曼哈顿</a>部分道路会封闭，包括曼哈顿刑事法庭和第五大道川普大厦附近的道路，提醒市民不要开车，最好搭乘大众交通工具出行。</p>
+	<p>【大纪元2023年04月04日讯】（大纪元记者黄小堂纽约报导）美国前总统川普周一（4月3日）从佛州飞往纽约，准备出席4日跟“封口费”相关的首次传讯。当天下午川普大厦外，各家媒体大量人马挤在曼哈顿56街和55街之间的第五大道街上，准备跟拍川普回到川普大厦的画面，而一些川普支持者和反对者也聚集在这里，手持标语各自表达立场。</p>
+<p>第五大道的人潮、车潮川流不息，当天下午一些开车经过的民众也透过各种方式表达他们的立场，所幸情况大致平和，没有见到严重的冲突场面。3日下午，川普抵达纽约，在多名维安人员看照下，从56街进入川普大厦内，而不是从第五大道的门口进入。</p>
+<figure id="attachment_13964874" aria-describedby="caption-attachment-13964874" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964874-165094.jpg"><img decoding="async" class="size-large wp-image-13964874" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964874-165094-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964874" class="wp-caption-text">2023年4月3日，警方出动至少三架直升机，在川普大厦上进行维安监控。（黄小堂／大纪元）</figcaption></figure>
+<figure id="attachment_13964872" aria-describedby="caption-attachment-13964872" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964872-165101.jpg"><img decoding="async" class="size-large wp-image-13964872" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964872-165101-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964872" class="wp-caption-text">2023年4月3日，警方在川普大厦外设置路障，纽约市警察在外进行维安。（黄小堂／大纪元）</figcaption></figure>
+<p>纽约市长亚当斯和纽约市警局局长塞维尔（Keechant Sewell）3日中午召开新闻发布会，表示目前没有针对纽约市的具体可信威胁，民众应该照常过日子，但是预计曼哈顿部分道路会封闭，包括曼哈顿刑事法庭和第五大道川普大厦附近的道路，提醒市民不要开车，最好搭乘大众交通工具出行。</p>
 <p>纽约市警局从上周末开始在川普大厦和市中心曼哈顿刑事法庭大楼周围的人行道边缘设置路障。3日下午，川普支持者聚集在第五大道靠近川普大厦那一侧的人行道，警方只给他们两个人能通过的狭长空间，川普支持者就在这里举着标语，高喊“我们爱川普”（We Love Trump）。</p>
-<figure id="attachment_13964880" aria-describedby="caption-attachment-13964880" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964880-165100.jpg"><img class="size-large wp-image-13964880" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964880-165100-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964880" class="wp-caption-text">2023年4月3日，支持川普的纽约华人在第五大道上集会。（黄小堂／大纪元）</figcaption></figure>
+<figure id="attachment_13964880" aria-describedby="caption-attachment-13964880" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964880-165100.jpg"><img decoding="async" class="size-large wp-image-13964880" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964880-165100-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964880" class="wp-caption-text">2023年4月3日，支持川普的纽约华人在第五大道上集会。（黄小堂／大纪元）</figcaption></figure>
 <p>挺川女士Stephanie说，她来这里是为了表达支持川普，同时抗议曼哈顿地区检察官白艾荣滥用职权，把司法武器化；另一名挺川民众Moni说，美国社会现在处于悬崖边缘，川普当政时一直拽着不让社会往悬崖坠落，现在当政者将美国社会变成意识形态之争，激进的意识形态在损害美国，而且积极从两三岁小孩开始下手，损害国家的未来。</p>
-<p>当天下午，反川民众也出现在第五大道上，手举标语“Lock Him Up and Throw Away the Key”偶尔跑到挺川队伍中，向挺川者讲几句话。</p>
-<figure id="attachment_13964879" aria-describedby="caption-attachment-13964879" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964879-165099.jpg"><img class="size-large wp-image-13964879" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964879-165099-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964879" class="wp-caption-text">2023年4月3日，反对川普的民众进入挺川队伍的人群中，双方拿着标语，较劲意味浓厚。（黄小堂／大纪元）</figcaption></figure>
-<figure id="attachment_13964877" aria-describedby="caption-attachment-13964877" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964877-165097.jpg"><img class="size-large wp-image-13964877" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964877-165097-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964877" class="wp-caption-text">2023年4月3日，反对川普的民众进入挺川队伍的人群中，较劲意味浓厚。（黄小堂／大纪元）</figcaption></figure>
-<figure id="attachment_13964875" aria-describedby="caption-attachment-13964875" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964875-165095.jpg"><img class="size-large wp-image-13964875" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964875-165095-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964875" class="wp-caption-text">2023年4月3日，三名反对川普的民众手举标语在第五大道上集会。（黄小堂／大纪元）</figcaption></figure>
-<figure id="attachment_13964873" aria-describedby="caption-attachment-13964873" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964873-165102.jpg"><img class="size-large wp-image-13964873" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964873-165102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964873" class="wp-caption-text">2023年4月3日，大批媒体聚居在川普大厦外面的第五大道，人潮拥挤。（黄小堂／大纪元）</figcaption></figure>
-<figure id="attachment_13964878" aria-describedby="caption-attachment-13964878" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964878-165098.jpg"><img class="size-large wp-image-13964878" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964878-165098-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964878" class="wp-caption-text">2023年4月3日，大批媒体记者聚集在川普大厦外面的第五大道。（黄小堂／大纪元）</figcaption></figure>
+<p>当天下午，反川民众也出现在第五大道上，手举标语“把他关起来”（Lock Him Up）、“把钥匙丢掉”（Throw Away the Key），双方较劲意味浓厚。</p>
+<figure id="attachment_13964879" aria-describedby="caption-attachment-13964879" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964879-165099.jpg"><img decoding="async" class="size-large wp-image-13964879" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964879-165099-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964879" class="wp-caption-text">2023年4月3日，反对川普的民众进入挺川队伍的人群中，双方拿着标语，较劲意味浓厚。（黄小堂／大纪元）</figcaption></figure>
+<figure id="attachment_13964877" aria-describedby="caption-attachment-13964877" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964877-165097.jpg"><img decoding="async" class="size-large wp-image-13964877" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964877-165097-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964877" class="wp-caption-text">2023年4月3日，反对川普的民众进入挺川队伍的人群中，较劲意味浓厚。（黄小堂／大纪元）</figcaption></figure>
+<figure id="attachment_13964875" aria-describedby="caption-attachment-13964875" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964875-165095.jpg"><img decoding="async" class="size-large wp-image-13964875" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964875-165095-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964875" class="wp-caption-text">2023年4月3日，三名反对川普的民众手举标语在第五大道上集会。（黄小堂／大纪元）</figcaption></figure>
+<figure id="attachment_13964873" aria-describedby="caption-attachment-13964873" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964873-165102.jpg"><img decoding="async" class="size-large wp-image-13964873" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964873-165102-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964873" class="wp-caption-text">2023年4月3日，大批媒体聚居在川普大厦外面的第五大道，人潮拥挤。（黄小堂／大纪元）</figcaption></figure>
+<figure id="attachment_13964878" aria-describedby="caption-attachment-13964878" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/04/id13964878-165098.jpg"><img decoding="async" class="size-large wp-image-13964878" src="https://i.epochtimes.com/assets/uploads/2023/04/id13964878-165098-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13964878" class="wp-caption-text">2023年4月3日，大批媒体记者聚集在川普大厦外面的第五大道。（黄小堂／大纪元）</figcaption></figure>
 <p>责任编辑：陈玟绮</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963982.md#1">川普周二被提审后将于海湖庄园发表演讲</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13964029.md#1">普萨基：民主党人不该“庆祝”对川普的起诉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964174.md#1">不满大陪审团诉川普 加州民众集会挺川竞选</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964230.md#1">曼哈顿法院为传讯川普做足准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/2/n13963982.md#1">川普周二被提审后将于海湖庄园发表演讲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/2/n13964029.md#1">普萨基：民主党人不该“庆祝”对川普的起诉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/3/n13964174.md#1">不满大陪审团诉川普 加州民众集会挺川竞选</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/3/n13964230.md#1">曼哈顿法院为传讯川普做足准备</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/26/n10809856.md#1" target="_blank">严家伟：人间地狱，四川古蔺岔角滩</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869318.md#1" target="_blank">这些前中共军官对李洪志大师的感恩</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/20/n10073567.md#1" target="_blank">中共教育投入与民国时期的教育投入</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/18/n11597772.md#1" target="_blank">法国解放报：法国应该承诺反对强摘器官</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964557.md#1">【舞蹈】中国舞动作快览：转</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964723.md#1">【秦鹏观察】去美元化加速？印度法国也加入</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964336.md#1">【环球直击】龙卷风与风暴横扫美国多州 至少22人亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963848.md#1">马英九在湖南称两岸都是中华民国 中共封杀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962245.md#1">九种最好的Costco商品 可在家随时备货</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961165.md#1">F-22令歼-20难敌 为何只有美空军可操作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963540.md#1">《最强阴阳师的异世界转生记》影评：想低调过日子 未必能如愿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963961.md#1">首度分享育儿日常 孙艺真自曝春天最忧心事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963302.md#1">高雄巨蛋开唱解禁 阿妹状态佳“铅笔腿现形”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13961054.md#1">有糖尿病也可放心吃！4种零食控血糖又解馋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964240.md#1">马斯克担忧 商业房地产引发债务危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963736.md#1">猛眨眼睛是说谎的迹象吗？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293177.md#1">《货郎图》——有趣的故事传承</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300734.md#1">目睹临终病患与亡者对话 护士质疑无神论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303407.md#1">按1穴快速止头痛 3类人小心 4习惯要改</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14303947.md#1">【菁英论坛】中共进入“治脸”时代</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14303069.md#1">【晚间新闻】湖南11万人受灾 江浙沪40度高温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303843.md#1">网曝湖南挂反共横幅者更多细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304119.md#1">【更新】2024年巴黎奥运奖牌榜 8月3日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14303130.md#1">贾玲瘦身大变样 亮相巴黎奥运满脸褶子引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303894.md#1">携妻女游日本 胡歌与女儿互动同框首曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304255.md#1">《心的温度》上映首日 2名观众 票房仅91元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304297.md#1">郑中基突开除经理人 宣布：下月高雄唱完后离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304294.md#1">知名摇滚天团“史密斯飞船”巡演中宣布退休</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279677.md#1">抢救落发  三招丰厚发量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300801.md#1">研究：常见家用化学品会攻击关键脑细胞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304411.md#1">感觉脚痛或疲劳？ 可能是你的凉鞋害的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302344.md#1">纳豆抗衰老、防血栓 五种人慎食</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/4/n13964871.htm">大批媒体驻守川普大厦外 挺川反川者集会</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/4/4/n13964871.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/4/4/n13964871.htm">大批媒体驻守川普大厦外 挺川反川者集会</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/4/4/n13964871.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
